--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Меин -->
     <main>
       <!-- Секция Hero -->
-      <section class="hero">
+      <section class="hero overlay">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для <br />вашого бізнесу</h1>
           <button type="button" class="hero-button">Замовити послугу</button>
