--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,9 @@
             </li>
           </ul>
         </nav>
+        <svg>
+          <use href="./images/sprite.svg#icon-astronaut"></use>
+        </svg>
         <ul class="contacts list">
           <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="contact-link link">
