--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
         <ul class="contacts list">
           <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="contact-link link">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contact-item">
             <a href="tel:+380961111111" class="contact-link link">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
               +38 096 111 11 11
             </a>
           </li>
@@ -65,6 +71,11 @@
           <h2 class="features-title visually-hidden">Наші особливості</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="feature-style">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -72,6 +83,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="feature-style">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Пунктуальність</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -79,12 +95,22 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="feature-style">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Планування</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
+              <div class="feature-style">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -145,6 +171,36 @@
               <div class="team-text-box">
                 <h3 class="team-member">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -158,6 +214,36 @@
               <div class="team-text-box">
                 <h3 class="team-member">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -171,6 +257,36 @@
               <div class="team-text-box">
                 <h3 class="team-member">Микола Тарасов</h3>
                 <p class="team-position">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -184,7 +300,87 @@
               <div class="team-text-box">
                 <h3 class="team-member">Михайло Єрмаков</h3>
                 <p class="team-position">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-link link">
+                      <svg class="social-net-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Постоянные Клиенты-->
+      <section class="customers section">
+        <div class="container">
+          <h2 class="customers-title">Постійні кліенти</h2>
+          <ul class="customer-list list">
+            <li class="customer-list-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-list-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-taglinehere"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-list-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-logocompany"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-list-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-list-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logobrand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-list-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-tag"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -193,38 +389,75 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <div class="footer-logo">
-          <a href="./index.html" class="logo-link link">
-            Web<span class="logo-light">Studio</span>
-          </a>
+        <div class="footer-container">
+          <div class="logo-address">
+            <div class="footer-logo">
+              <a href="./index.html" class="logo-link link">
+                Web<span class="logo-light">Studio</span>
+              </a>
+            </div>
+            <address class="footer-address">
+              <ul class="address-list list">
+                <li class="address-item">
+                  <a
+                    class="address-link link"
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    м. Київ, пр-т Лесі Украінки, 26
+                  </a>
+                </li>
+                <li class="address-item">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="address-link-dark link"
+                  >
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380961111111" class="address-link-dark link">
+                    +38 096 111 11 11
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="social-net">
+            <p class="social-text">Приєднуйтесь</p>
+            <ul class="social-net-list list">
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <address class="footer-address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                class="address-link link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Украінки, 26
-              </a>
-            </li>
-            <li class="address-item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="address-link-dark link"
-              >
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="address-item">
-              <a href="tel:+380961111111" class="address-link-dark link">
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </address>
       </div>
     </footer>
   </body>
