--- a/portfolio.html
+++ b/portfolio.html
@@ -26,29 +26,30 @@
           </a>
           <ul class="nav-list list">
             <li class="nav-item">
-              <a href="./index.html" class="nav-link link">Студія</a>
+              <a href="./index.html" class="nav-link link current">Студія</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link current"
-                >Портфоліо</a
-              >
+              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <svg>
-          <use href="./images/sprite.svg#icon-astronaut"></use>
-        </svg>
         <ul class="contacts list">
           <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="contact-link link">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contact-item">
             <a href="tel:+380961111111" class="contact-link link">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
               +38 096 111 11 11
             </a>
           </li>
@@ -186,38 +187,75 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <div class="footer-logo">
-          <a href="./index.html" class="logo-link link">
-            Web<span class="logo-light">Studio</span>
-          </a>
+        <div class="footer-container">
+          <div class="logo-address">
+            <div class="footer-logo">
+              <a href="./index.html" class="logo-link link">
+                Web<span class="logo-light">Studio</span>
+              </a>
+            </div>
+            <address class="footer-address">
+              <ul class="address-list list">
+                <li class="address-item">
+                  <a
+                    class="address-link link"
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    м. Київ, пр-т Лесі Украінки, 26
+                  </a>
+                </li>
+                <li class="address-item">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="address-link-dark link"
+                  >
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380961111111" class="address-link-dark link">
+                    +38 096 111 11 11
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="social-net">
+            <p class="social-text">Приєднуйтесь</p>
+            <ul class="social-net-list list">
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-net-item">
+                <a href="#" class="net-link link">
+                  <svg class="social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <address class="footer-address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                class="address-link link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Украінки, 26
-              </a>
-            </li>
-            <li class="address-item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="address-link-dark link"
-              >
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="address-item">
-              <a href="tel:+380961111111" class="address-link-dark link">
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </address>
       </div>
     </footer>
   </body>
